syntax = "proto3";
package kaskada.kaskada.v1alpha;

import "google/protobuf/timestamp.proto";

message PulsarConfig {
  // The Pulsar protocol URL for the cluster.
  //
  // Defaults to "pulsar://127.0.0.1:6650".
  string broker_service_url = 1;

   // The Pulsar admin REST URL for the cluster.
  //
  // Defaults to http://127.0.0.1:8080
  string admin_service_url = 2;

  // Authentication plugin to use.
  // e.g. "org.apache.pulsar.client.impl.auth.AuthenticationToken"
  string auth_plugin = 3;

  // Authentication parameters.
  // e.g. "token:xxx"
  string auth_params = 4;

  // A custom certificate chain to authenticate the server in TLS connections.
  string certificate_chain = 5;

  // The topic tenant within the instance.
  //
  // Defaults to "public".
  string tenant = 6;

  // The administrative unit of topics, which acts as a grouping
  // mechanism for related topics.
  //
  // Defaults to "default".
  string namespace = 7;

  // The final part of the topic url.
  //
  // Defaults to a randomly generated uuid.
  string topic_name = 8;
}

// Configuration for a single source of data from a pulsar topic.
message PulsarSubscription {
  PulsarConfig config = 1;

  // a unique-id for this source to use when
  // subscribing to the pulsar broker.
  string subscription_id = 2;

  google.protobuf.Timestamp last_publish_time = 3;
}
